--- a/Index.html
+++ b/Index.html
@@ -6,9 +6,9 @@
 </head>
 <body>
     <ul>
-        <li>Vagrant: Gerenciando Máquinas Virtuais</li>
+        <li>Vagrant: Gerenciando Maquínas Virtuais</li>
         <li>Docker: Criando Containers sem dor de Cabeça</li>
-        <li>Ansible: Infraestrutura como Código</li>
+        <li>Ansible</li>
         <li>Integração Contínua: Maturidade e Produtividade no Desenvolvimento de Software</li>
         <li>Kubernetes</li>
     </ul>
